FTB/Signatures/tests/fixtures/trace_ubsan_div_by_zero_no_trace.txt
src/opus_demo.c:870:40: runtime error: division by zero
